--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # Prerequisites
 *.d
 
+# Binary files
+*.bin
+
 # Object files
 *.o
 *.ko
 *.obj
 *.elf
+out/*
 
 # Linker output
 *.ilk
@@ -17,16 +21,17 @@
 *.pch
 
 # Libraries
-*.lib
-*.a
-*.la
-*.lo
+#*.lib
+#*.a
+#*.la
+#*.lo
 
 # Shared objects (inc. Windows DLLs)
 *.dll
 *.so
 *.so.*
 *.dylib
+*.lds
 
 # Executables
 *.exe
